Closed
Bug 1230478
Opened 10 years ago
Closed 10 years ago
[css-grid][css-align]Rename 'true' to 'unsafe'
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla46
| Tracking | Status | |
|---|---|---|
| firefox46 | --- | fixed |
People
(Reporter: percyley, Assigned: MatsPalmgren_bugz)
References
(Blocks 1 open bug, )
Details
(Keywords: dev-doc-needed)
Attachments
(2 files)
|
5.38 KB,
patch
|
dholbert
:
review+
|
Details | Diff | Splinter Review |
|
15.86 KB,
patch
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/46.0.2490.86 Safari/537.36
Steps to reproduce:
CSS spec rename 'true' to 'unsafe'
diff: https://hg.csswg.org/drafts/rev/f34a2a8b8177
spce: https://drafts.csswg.org/css-align/?c=M%3BO%3DD#overflow-values
| Assignee | ||
Updated•10 years ago
|
Mats, do you want to look at this?
Flags: needinfo?(mats)
| Assignee | ||
Comment 2•10 years ago
|
||
I'm a bit busy with other stuff right now, perhaps Tobias have time for it?
Flags: needinfo?(mats) → needinfo?(schneider)
WebKit done: http://trac.webkit.org/changeset/194104
| Assignee | ||
Comment 5•10 years ago
|
||
| Assignee | ||
Comment 6•10 years ago
|
||
Updated•10 years ago
|
Attachment #8702161 -
Flags: review?(dholbert) → review+
Comment 7•10 years ago
|
||
Comment on attachment 8702162 [details] [diff] [review]
part 2 - [css-grid][css-align] Change 'true' to 'unsafe' in tests
Review of attachment 8702162 [details] [diff] [review]:
-----------------------------------------------------------------
::: layout/style/test/property_database.js
@@ +4244,1 @@
> "stretch safe" ]
Maybe worth adding a formerly-valid "true" value to the invalid_values list here?
e.g. "true end"
(This proves/checks that we really don't support the "true" keyword here anymore.)
Comment 8•10 years ago
|
||
Comment on attachment 8702161 [details] [diff] [review]
part 1 - [css-grid][css-align] Rename 'true' to 'unsafe' in <overflow-position>.
Review of attachment 8702161 [details] [diff] [review]:
-----------------------------------------------------------------
::: layout/style/nsStyleConsts.h
@@ +487,5 @@
> #define NS_STYLE_ALIGN_SELF_END 12
> #define NS_STYLE_ALIGN_SPACE_BETWEEN 13
> #define NS_STYLE_ALIGN_SPACE_AROUND 14
> #define NS_STYLE_ALIGN_SPACE_EVENLY 15
> #define NS_STYLE_ALIGN_LEGACY 0x10 // mutually exclusive w. SAFE & TRUE
Actually, one nit on part 1 -- this comment needs s/TRUE/UNSAFE/
| Assignee | ||
Comment 10•10 years ago
|
||
(In reply to Daniel Holbert [:dholbert] from comment #7)
> Maybe worth adding a formerly-valid "true" value to the invalid_values list
> here?
Good idea, but I didn't bother because I think we should just remove
the 'true' keyword instead. AFAIK, we (now) only use it for text-align[-last]
which dropped 'true' some time ago (and we never enabled it by default).
I filed bug 1237059 about this.
| Assignee | ||
Updated•10 years ago
|
Flags: in-testsuite+
Updated•10 years ago
|
Keywords: dev-doc-needed
Comment 11•10 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/9403494cc755
https://hg.mozilla.org/mozilla-central/rev/d5245c7bbe0f
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox46:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
You need to log in
before you can comment on or make changes to this bug.
Description
•